--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-3d-viewer": "^1.0.12",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.22",
     "react-scripts": "5.0.0",
+    "stl-viewer": "^0.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
